feat(ai): migrate medical document summarization to LangChain/Gemini and support Supabase syncing